generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id                 Int        @id @default(autoincrement())
  username           String     @unique
  password           String
  spotifyUsername    String?
  socialMediaAccount String?
  firstName          String
  lastName           String
  email              String     @unique
  edits              Edit[]
  playlists          Playlist[]
  tracks             Track[]    @relation("UserTracks")
  uploads            Upload[]
  admin              Boolean    @default(false)
}

model Track {
  id           Int       @id @default(autoincrement())
  trackName    String?
  artistName   String?
  bitrate      Int       @default(320)
  samplingrate Int       @default(44100)
  channelmode  String    @default("stereo")
  audioDataUrl String? //associate with users path on device
  albumName    String?
  bpm          Int?
  genre        String?
  instrumental Boolean?
  vocals       Boolean?
  duration     Int?
  userId       Int?
  playlistId   Int?
  playlist     Playlist? @relation("PlaylistTracks", fields: [playlistId], references: [id])
  user         User?     @relation("UserTracks", fields: [userId], references: [id])
}

model Upload {
  id           Int     @id @default(autoincrement())
  name         String
  userId       Int
  duration     Int
  bitrate      Int     @default(320)
  samplingrate Int     @default(44100)
  channelmode  String  @default("stereo")
  audioDataUrl String? //associate with users path on device
  user         User    @relation(fields: [userId], references: [id])
}

model Playlist {
  id          Int     @id @default(autoincrement())
  name        String
  description String
  userId      Int
  user        User    @relation(fields: [userId], references: [id])
  tracks      Track[] @relation("PlaylistTracks")
}

model Edit {
  id           Int      @id @default(autoincrement())
  editName     String
  artistName   String
  vocals       Boolean
  instrumental Boolean
  duration     Int
  pitch        Int
  bpm          Int
  genre        String
  loop         Boolean?
  effects      String
  userId       Int
  bitrate      Int      @default(320)
  samplingrate Int      @default(44100)
  channelmode  String   @default("stereo")
  audioDataUrl String? //associate with users path on device
  user         User     @relation(fields: [userId], references: [id])
}
